// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`select_reducer renders correctly 1`] = `
Object {
  "error": Object {},
  "menu": undefined,
  "singleMenu": null,
}
`;

exports[`select_reducer renders correctly 2`] = `
Object {
  "error": undefined,
  "menu": Array [],
  "singleMenu": null,
}
`;

exports[`select_reducer renders correctly 3`] = `
Object {
  "error": undefined,
  "menu": Array [],
  "singleMenu": null,
}
`;

exports[`select_reducer returns the correct state 1`] = `
Object {
  "error": Object {},
  "menu": Array [],
  "singleMenu": null,
}
`;

exports[`select_reducer returns the correct state 2`] = `
Object {
  "error": Object {},
  "menu": Array [],
  "singleMenu": null,
}
`;
